--- a/config/corne.conf
+++ b/config/corne.conf
@@ -2,3 +2,4 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 CONFIG_ZMK_DISPLAY=y
+CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
