--- a/build.yaml
+++ b/build.yaml
@@ -22,5 +22,5 @@ include:
     shield: corne_left
   - board: nice_nano
     shield: corne_right
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: settings_reset
